Show all room prototype

--- a/SIGS_prototype/pages/minha_conta.html
+++ b/SIGS_prototype/pages/minha_conta.html
@@ -34,7 +34,7 @@
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
           <li><a href="#">Turmas</a></li>
-          <li><a href="#">Salas</a></li>
+          <li><a href="salas.html">Salas</a></li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários
               <ul class="collapse" id="demo">
