--- a/SIGS_prototype/pages/salas.html
+++ b/SIGS_prototype/pages/salas.html
@@ -51,10 +51,26 @@
         </figure>
       </header>
       <main class="mainConteiner">
-        <h1> Wallacy Braz</h1>
-        <h2>CPF: 05012348888 </h2> <br>
-        <h2>Registro: 1234588 </h2> <br>
-        <h2>Email: wallacy@unb.br </h2> <br>
+        <h1>Salas</h1>
+        <table class="table">
+          <tr>
+            <td>Código</td>
+            <td>Nome</td>
+            <td>Ativo</td>
+            <td>Prédio</td>
+            <td style="text-align:center">Alterar</td>
+            <td style="text-align:center">Visualizar</td>
+          </tr>
+          <tr>
+            <td>S10</td>
+            <td>Superior 10</td>
+            <td>Sim</td>
+            <td>Pavilhão João Calmon</td>
+            <td style="text-align:center"><a href="alterar_sala.html"><img src="../assets/img/icon_edit.png" alt="alterar"></a></td>
+            <td style="text-align:center"><a href="mostrar_sala.html"><img src="../assets/img/icon_view.png" alt="visualizar"></a></td>
+          </tr>
+        </table>
+
       </main>
     </div>
   </body>
