--- a/SIGS_prototype/pages/salas.html
+++ b/SIGS_prototype/pages/salas.html
@@ -58,20 +58,40 @@
             <td>Nome</td>
             <td>Ativo</td>
             <td>Prédio</td>
-            <td style="text-align:center">Alterar</td>
             <td style="text-align:center">Visualizar</td>
+            <td style="text-align:center">Alterar</td>
+            <td style="text-align:center">Excluir</td>
           </tr>
-          <tr>
+          <tr class="sala1">
             <td>S10</td>
             <td>Superior 10</td>
             <td>Sim</td>
             <td>Pavilhão João Calmon</td>
-            <td style="text-align:center"><a href="alterar_sala.html"><img src="../assets/img/icon_edit.png" alt="alterar"></a></td>
             <td style="text-align:center"><a href="mostrar_sala.html"><img src="../assets/img/icon_view.png" alt="visualizar"></a></td>
+            <td style="text-align:center"><a href="alterar_sala.html"><img src="../assets/img/icon_edit.png" alt="alterar"></a></td>
+            <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
           </tr>
         </table>
 
       </main>
     </div>
+    <!-- Modal -->
+<div class="modal fade modalDelete" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Excluir Sala</h4>
+      </div>
+      <div class="modal-body">
+        <p>Tem certeza que deseja excluir essa sala?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success btnDelete" data-dismiss="modal">Confirmar</button>
+      </div>
+    </div>
+  </div>
+</div>
   </body>
 </html>
