--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -33,13 +33,21 @@
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
           <li><a href="turma.html">Turmas</a></li>
-          <li><a href="salas.html">Salas</a></li>
+          <li class="dropdown">
+            <a data-toggle="collapse" href="#salas">Salas
+              <ul class="collapse" id="salas">
+                <li><a href="salas.html">Meu Departamento</a></li>
+                <li><a href="#!">Buscar Salas</a></li>
+              </ul>
+            </a>
+          </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários
               <ul class="collapse" id="demo">
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
+            </a>
           </li>
           <li><a href="#">Alocações</a></li>
         </ul>
