--- a/SIGS_prototype/pages/minha_conta.html
+++ b/SIGS_prototype/pages/minha_conta.html
@@ -34,7 +34,13 @@
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
           <li><a href="#">Turmas</a></li>
-          <li><a href="salas.html">Salas</a></li>
+            <li class="dropdown">
+            <a data-toggle="collapse" href="#salas">Salas
+              <ul class="collapse" id="salas">
+                <li><a href="salas.html">Salas</a></li>
+                <li><a href="categorias.html">Categorias</a></li>
+              </ul>
+            </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários
               <ul class="collapse" id="demo">
