--- a/SIGS_prototype/pages/turma.html
+++ b/SIGS_prototype/pages/turma.html
@@ -33,8 +33,14 @@
         <ul class="nav navbar-nav">
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
-          <li><a href="turma.html">Turmas</a></li>
-          <li><a href="#">Salas</a></li>
+          <li><a href="#">Turmas</a></li>
+            <li class="dropdown">
+            <a data-toggle="collapse" href="#salas">Salas
+              <ul class="collapse" id="salas">
+                <li><a href="salas.html">Salas</a></li>
+                <li><a href="categorias.html">Categorias</a></li>
+              </ul>
+            </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários
               <ul class="collapse" id="demo">
