Add link of allocation in every page of prototype

--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -41,7 +41,13 @@
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
           </li>
-          <li><a href="#">Alocações</a></li>
+          <li class="dropdown">
+            <a data-toggle="collapse" href="#alocar">Alocações</a>
+              <ul class="collapse" id="alocar">
+                <li><a href="alocacao.html">Graduação</a></li>
+                <li><a href="alocar_extensao.html">Extensão</a></li>
+              </ul>
+          </li>
         </ul>
 
         <figure class="unbLogo">
