--- a/SIGS_prototype/pages/alocar_extensao.html
+++ b/SIGS_prototype/pages/alocar_extensao.html
@@ -42,12 +42,12 @@
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
-            </li>
+          </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#alocar">Alocações</a>
               <ul class="collapse" id="alocar">
                 <li><a href="alocacao.html">Graduação</a></li>
-                <li><a href="extensao.html">Extensão</a></li>
+                <li><a href="alocar_extensao.html">Extensão</a></li>
               </ul>
           </li>
         </ul>
@@ -59,7 +59,7 @@
         </figure>
       </header>
       <main class="mainConteiner">
-        
+
         <h1><img src="../assets/img/plus.png" alt="" id="add_menu" class="none">&nbsp;&nbsp;Realizar Alocação para Extensão</h1>
 
         <form class="alocacao_index">
@@ -78,7 +78,7 @@
               <label for="Disciplina">Vagas requeridas: </label>
               &nbsp;&nbsp;&nbsp;&nbsp;<input type="number" name="numero_vagas">
             </div>
-          </fieldset> 
+          </fieldset>
         </div>
         <br /><br />
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sala-form">
