--- a/SIGS_prototype/pages/turma.html
+++ b/SIGS_prototype/pages/turma.html
@@ -34,19 +34,19 @@
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
           <li><a href="turma.html">Turmas</a></li>
-          <li><a href="#">Salas</a></li>
+          <li><a href="salas.html">Salas</a></li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários</a>
               <ul class="collapse" id="demo">
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
-            </li>
+          </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#alocar">Alocações</a>
               <ul class="collapse" id="alocar">
                 <li><a href="alocacao.html">Graduação</a></li>
-                <li><a href="extensao.html">Extensão</a></li>
+                <li><a href="alocar_extensao.html">Extensão</a></li>
               </ul>
           </li>
         </ul>
