--- a/SIGS_prototype/pages/usuarios_registrados.html
+++ b/SIGS_prototype/pages/usuarios_registrados.html
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav">
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
-          <li><a href="#">Turmas</a></li>
+          <li><a href="turma.html">Turmas</a></li>
           <li><a href="salas.html">Salas</a></li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#demo">Usuários
@@ -40,8 +40,14 @@
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
-            </li>
-          <li><a href="#">Alocações</a></li>
+          </li>
+          <li class="dropdown">
+            <a data-toggle="collapse" href="#alocar">Alocações</a>
+              <ul class="collapse" id="alocar">
+                <li><a href="alocacao.html">Graduação</a></li>
+                <li><a href="alocar_extensao.html">Extensão</a></li>
+              </ul>
+          </li>
         </ul>
 
         <figure class="unbLogo">
