--- a/SIGS_prototype/pages/salas.html
+++ b/SIGS_prototype/pages/salas.html
@@ -45,29 +45,52 @@
     <main class="mainConteiner">
       <div class="container">
         <h1>Salas</h1>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <td>Código</td>
-              <td>Nome</td>
-              <td>Ativo</td>
-              <td>Prédio</td>
-              <td style="text-align:center">Visualizar</td>
-              <td style="text-align:center">Alterar</td>
-              <td style="text-align:center">Excluir</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="sala1">
-              <td>S10</td>
-              <td>Superior 10</td>
-              <td>Sim</td>
-              <td>Pavilhão João Calmon</td>
-              <td style="text-align:center"><a href="mostrar_sala.html"><img src="../assets/img/icon_view.png" alt="visualizar"></a></td>
-              <td style="text-align:center"><a href="alterar_sala.html"><img src="../assets/img/icon_edit.png" alt="alterar"></a></td>
-              <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
-            </tr>
-          </tbody>
+
+        <table class="table">
+          <tr>
+              <th>Selecione a Ala</th>
+              <th>Vagas</th>
+          </tr>
+
+          <tr>
+            <td>
+              <select>
+                <option value=""></option>
+                <option value="norte">Ala Norte</option>
+                <option value="central">Ala Central</option>
+                <option value="sul">Ala Sul</option>
+              </select>
+            </td>
+
+            <td>
+                <input type="number" name="quantity" min="1" max="300">
+            </td>
+
+          </tr>
+
+          <tr>
+            <td><input type="submit" value="Pequisar"></td>
+          </tr>
+
+        </table>
+
+        <table class="table">
+          <tr>
+            <td>Código</td>
+            <td>Nome</td>
+            <td>Ativo</td>
+            <td>Prédio</td>
+            <td style="text-align:center">Alterar</td>
+            <td style="text-align:center">Visualizar</td>
+          </tr>
+          <tr>
+            <td>S10</td>
+            <td>Superior 10</td>
+            <td>Sim</td>
+            <td>Pavilhão João Calmon</td>
+            <td style="text-align:center"><a href="alterar_sala.html"><img src="../assets/img/icon_edit.png" alt="alterar"></a></td>
+            <td style="text-align:center"><a href="mostrar_sala.html"><img src="../assets/img/icon_view.png" alt="visualizar"></a></td>
+          </tr>
         </table>
 
       </div><!-- /.container -->
