--- a/SIGS_prototype/pages/editar_categoria.html
+++ b/SIGS_prototype/pages/editar_categoria.html
@@ -33,7 +33,13 @@
         <ul class="nav navbar-nav">
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
-          <li><a href="#">Turmas</a></li>           
+          <li class="dropdown">
+<a data-toggle="collapse" href="#salas">Turmas
+  <ul class="collapse" id="salas">
+    <li><a href="criar_turma.html">Nova Turma</a></li>
+    <li><a href="visualizar_turmas.html">Meu Departamento</a></li>
+  </ul>
+</li>           
             <li class="dropdown">
             <a data-toggle="collapse" href="#salas">Salas
               <ul class="collapse" id="salas">
