--- a/SIGS_prototype/pages/salas.html
+++ b/SIGS_prototype/pages/salas.html
@@ -48,8 +48,10 @@
 
         <table class="table">
           <tr>
-              <th>Selecione a Ala</th>
+              <th>Ala</th>
               <th>Vagas</th>
+              <th>Curso</th>
+              <th>Disciplina</th>
           </tr>
 
           <tr>
@@ -65,15 +67,69 @@
             <td>
                 <input type="number" name="quantity" min="1" max="300">
             </td>
+              <td>
+                <select>
+                  <option value=""></option>
+                  <option value="norte">Engenharia de Software</option>
+                  <option value="central">Design</option>
+                  <option value="sul">Física</option>
+                </select>
+              </td>
+              <td>
+                  <select>
+                    <option value=""></option>
+                    <option value="norte">Algoritmos de Programação</option>
+                    <option value="central">Design de jogos</option>
+                    <option value="sul">Física Experimental</option>
+                  </select>
+                </td>
+            </tr>
+            <tr>
+                <th>Categoria</th>
+                <th>Horário de início</th>
+            </tr>
+            <tr>
+                <td>
+                  <input type="checkbox" name="category1" value="Retroprojetor">Retroprojetor
+                  <br>
+                  <input type="checkbox" name="category2" value="Ar_condicionado">Ar condicionado
+                  <br>
+                  <input type="checkbox" name="category3" value="Sala_de_informatica">Sala de informática
+                  <br>
+                  <input type="checkbox" name="category4" value="Laboratorio_Quimico">Laboratório Químico
+                  <br>
+                  <input type="checkbox" name="category5" value="Auditorio">Auditório
+                  <br><br>
 
-          </tr>
-
+                  <td>
+                    <input type="checkbox" name="category5" value="Auditorio">06:00
+                    <br>
+                    <input type="checkbox" name="category1" value="Retroprojetor">08:00
+                    <br>
+                    <input type="checkbox" name="category2" value="Ar_condicionado">10:00
+                    <br>
+                    <input type="checkbox" name="category3" value="Sala_de_informatica">12:00
+                    <br>
+                    <input type="checkbox" name="category4" value="Laboratorio_Quimico">14:00
+                  </td>
+                  <td>
+                    <input type="checkbox" name="category5" value="Auditorio">16:00
+                    <br>
+                    <input type="checkbox" name="category5" value="Auditorio">18:00
+                    <br>
+                    <input type="checkbox" name="category5" value="Auditorio">20:00
+                    <br>
+                    <input type="checkbox" name="category5" value="Auditorio">22:00
+                    <br>
+                    <input type="checkbox" name="category5" value="Auditorio">24:00
+                    <br><br>
+                  </td>
+                </td>
+            </tr>
           <tr>
             <td><input type="submit" value="Pequisar"></td>
           </tr>
-
         </table>
-
         <table class="table">
           <tr>
             <td>Código</td>
