--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -33,8 +33,8 @@
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
           <li class="dropdown">
-          <a data-toggle="collapse" href="#salas">Turmas
-            <ul class="collapse" id="salas">
+          <a data-toggle="collapse" href="#turmas">Turmas
+            <ul class="collapse" id="turmas">
               <li><a href="criar_turma.html">Nova Turma</a></li>
               <li><a href="visualizar_turmas.html">Meu Departamento</a></li>
             </ul>
@@ -46,14 +46,12 @@
                 <li><a href="categorias.html">Categorias</a></li>
               </ul>
             </li>
-
           <li class="dropdown">
-            <a data-toggle="collapse" href="#demo">Usuários
+            <a data-toggle="collapse" href="#demo">Usuários</a>
               <ul class="collapse" id="demo">
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
               </ul>
-            </a>
           </li>
           <li class="dropdown">
             <a data-toggle="collapse" href="#alocar">Alocações</a>
