--- a/SIGS_prototype/pages/cadastros_pendentes.html
+++ b/SIGS_prototype/pages/cadastros_pendentes.html
@@ -32,17 +32,13 @@
         <ul class="nav navbar-nav">
           <li><a href="minha_conta.html">Minha Conta</a></li>
           <li><a href="../index.html">Logout</a></li>
-<<<<<<< HEAD
           <li class="dropdown">
-<a data-toggle="collapse" href="#salas">Turmas
-  <ul class="collapse" id="salas">
-    <li><a href="criar_turma.html">Nova Turma</a></li>
-    <li><a href="visualizar_turmas.html">Meu Departamento</a></li>
-  </ul>
-</li>
-=======
-          <li><a href="#">Turmas</a></li>
->>>>>>> development
+          <a data-toggle="collapse" href="#turmas">Turmas
+            <ul class="collapse" id="turmas">
+              <li><a href="criar_turma.html">Nova Turma</a></li>
+              <li><a href="visualizar_turmas.html">Meu Departamento</a></li>
+            </ul>
+          </li>
             <li class="dropdown">
             <a data-toggle="collapse" href="#salas">Salas
               <ul class="collapse" id="salas">
@@ -51,7 +47,7 @@
               </ul>
             </li>
           <li class="dropdown">
-            <a data-toggle="collapse" href="#demo">Usuários
+            <a data-toggle="collapse" href="#demo">Usuários</a>
               <ul class="collapse" id="demo">
                 <li><a href="cadastros_pendentes.html">Cadastros Pendentes</a></li>
                 <li><a href="usuarios_registrados.html">Usuários Cadastrados</a></li>
