issue #26: adding categories in school room

--- a/SIGS_prototype/pages/alterar_turma.html
+++ b/SIGS_prototype/pages/alterar_turma.html
@@ -84,7 +84,7 @@
             <input type="text" class="form-control" value="A">
           </div>
 
-          <p>Cursos Preferenciais</p>
+          <p>Cursos</p>
           <div class="checkbox-group">
             <input type="checkbox">
             <label>Engenharia de Software</label>
@@ -98,6 +98,14 @@
             <label>Letras</label>
             <input type="checkbox" checked>
             <label>Jornalismo</label>
+          </div>
+          <br>
+          <p>Categorias</p>
+          <div class="checkbox-group">
+            <input type="checkbox">
+            <label>Retroprojetor</label>
+            <input type="checkbox">
+            <label>Laboratório Químico</label>
           </div>
 
           <input type="submit" value="Alterar Turma" class="btn btn-default btn-success" />
