--- a/SIGS_prototype/pages/criar_turma.html
+++ b/SIGS_prototype/pages/criar_turma.html
@@ -83,7 +83,7 @@
             <input type="text" class="form-control">
           </div>
 
-          <p>Cursos Preferenciais</p>
+          <p>Cursos</p>
           <div class="checkbox-group">
             <input type="checkbox">
             <label>Engenharia de Software</label>
@@ -93,6 +93,14 @@
             <label>Medicina</label>
             <input type="checkbox">
             <label>Design</label>
+          </div>
+          <br>
+          <p>Categorias</p>
+          <div class="checkbox-group">
+            <input type="checkbox">
+            <label>Retroprojetor</label>
+            <input type="checkbox">
+            <label>Laboratório Químico</label>
           </div>
 
           <input type="submit" value="Criar Turma" class="btn btn-default btn-success" />
