issue #26: Fix backend errors to update school room

--- a/SIGS_prototype/pages/alterar_turma.html
+++ b/SIGS_prototype/pages/alterar_turma.html
@@ -81,7 +81,7 @@
           </select>
           <div class="short_input">
             <label>Nome</label>
-            <input type="text" class="form-control" value="A">
+            <input type="text" class="form-control" value="A" disabled="disabled">
           </div>
 
           <p>Cursos</p>
