--- a/SIGS_prototype/pages/criar_turma.html
+++ b/SIGS_prototype/pages/criar_turma.html
@@ -89,8 +89,10 @@
           <div class="short_input">
             <label>Nome</label>
             <input type="text" class="form-control">
+            <label>Capacidade</label>
+            <input type="number" class="form-control">
           </div>
-
+          <br>
           <p>Cursos Preferenciais</p>
           <div class="checkbox-group">
             <input type="checkbox">
