--- a/SIGS_prototype/pages/categorias.html
+++ b/SIGS_prototype/pages/categorias.html
@@ -61,6 +61,13 @@
                 <li><a href="alocar_extensao.html">Extensão</a></li>
               </ul>
           </li>
+
+          <li class="dropdown">
+            <a data-toggle="collapse" href="#Relatórios">Relatórios</a>
+              <ul class="collapse" id="relatorios">
+                <li><a href="relatorio_por_sala.html">por Sala</a></li>
+              </ul>
+          </li>
         </ul>
 
         <figure class="unbLogo">
